ecmascript/parser/tests/test262-error-references/fail/e3fbcf63d7e43ead.js.stderr
error: Expected Semi, got Some(RParen)
 --> $DIR/tests/test262-parser/fail/e3fbcf63d7e43ead.js:1:23
  |
1 | for(var x=1 in [1,2,3]) 0
  |                       ^

